/*
 * $Id: ChangeLog,v 1.1933 2003/12/23 02:51:58 peterrees Exp $
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/
2003-12-23 15:51 UTC+1200 Peter Rees <peter(AT)rees.co.nz>
  * /source/rtl/gtwvt/gtwvt.c
  + Fix handling of K_LBUTTONUP & K_RBUTTONUP

2003-12-23 15:51 UTC+1200 Peter Rees <peter(AT)rees.co.nz>
  * /source/vm/mainwin.c
  + update to use HB_FM_WIN32_ALLOC so malloc() is default not LocalAlloc()

2003-12-23 01:44 UTC+0100 Przemyslaw Czerpak <druzus@polbox.com>
  * xharbour/config/dos/dir.cf
  * xharbour/config/dos/global.cf
  * xharbour/config/dos/install.cf
  * xharbour/config/w32/global.cf
    * small cleanups

  * xharbour/include/hbsetup.h
  * xharbour/source/vm/fm.c
    + new macro HB_FM_WIN32_ALLOC which enable Win API
      LocalAlloc()/LocalFree() instead of C malloc()/free()
    * HB_FM_WIN32_ALLOC is disable by default

  + xharbour/tests/speedtst.prg
    + simple program for speed test added

2003-12-23 13:45 UTC+1200 Peter Rees <peter(AT)rees.co.nz>
  * /source/rtl/persist.prg
  + fixed bug if CHR(13) or CHR(10) embedded in character string variable
  +       and also if character string length > 254 character
  +       i.e. removed use of MLCOUNT() / MEMOLINE()

2003-12-23 07:00 UTC+0700 Andi Jahja <xharbour@cbn.net.id>
  * source/rtl/gtwvt/gtwvt.c
    * modify castings on hb_hInstance and hb_hPrevInstance for MSVC.

2003-12-22 22:47 UTC+0100 Przemyslaw Czerpak <druzus@polbox.com>
  * xharbour/config/dos/watcom.cf
  * xharbour/config/w32/msvc.cf
  * xharbour/config/w32/watcom.cf
  * xharbour/source/rtl/gtwin/gtwin.c
  * xharbour/source/rtl/gtwvt/gtwvt.c
  * xharbour/source/rtl/gtwin/mousewin.c
    * small fixes for HB_MULTI_GT mode

2003-12-22 12:16 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
   * source/rdd/dbcmd.c