@@ -1,5 +1,5 @@
 /*
- * $Id: ChangeLog,v 1.1933 2003/12/23 02:51:58 peterrees Exp $
+ * $Id: ChangeLog,v 1.1934 2003/12/23 03:12:49 peterrees Exp $
  */
 
 /* Use this format for the entry headers:
@@ -7,6 +7,11 @@
    For example:
    2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
 */
+
+2003-12-22 22:36 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
+   * source/rdd/dbcmd.c
+     * Fixes to HB_FUNC( SELECT ) and HB_FUNC( DBSETRELATION ) related to last change.
+
 2003-12-23 15:51 UTC+1200 Peter Rees <peter(AT)rees.co.nz>
   * /source/rtl/gtwvt/gtwvt.c
   + Fix handling of K_LBUTTONUP & K_RBUTTONUP
